<resources>
    <string name="app_name">Quiz</string>
    <string name="questionLabel">Question</string>
    <string name="answerResult">Resultat</string>
    <string name="faux">FAUX</string>
    <string name="vrai">VRAI</string>
    <string name="questionText">Question...</string>
    <string name="forward_question">Suivant</string>
    <string name="previous_question">Precedent</string>
    <string name="questionRatio">.../...</string>
    <string name="solutionButton">"Solution "</string>
    <string name="fuckTitle">Ca marche </string>
    <string name="previousPageButton">Page precedente</string>
    <string name="returnButton">Retour</string>
    <string name="goodAnswerResultLabel3">TextView</string>
    <string name="goodAnswerResultLabel2">TextView</string>
    <string name="validateSolutionButton">Valider</string>
    <string name="load_json">Load JSON</string>
    <string name="load_sql">Load SQL</string>
    <string name="gererlesquestions">Gérer les questions</string>
    <string name="deleteQuestion">Delete Question</string>
    <string name="modifyQuestion">Modify Question</string>
    <string name="addQuestion">Add Question</string>
    <string name="QuestionTextFormView">affichage question</string>
</resources>
